kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    name: devsecops
    app.kubernetes.io/part-of: enterprise-devsecops-pipeline
